--- a/app/index.html
+++ b/app/index.html
@@ -9,10 +9,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/slick-theme.css">
-    <link rel="stylesheet" href="css/libs.min.css" type="text/css">
+    <link rel="stylesheet" href="css/libs.min.css" type="text/css">    
     <link rel="stylesheet" href="css/style.min.css" type="text/css">
     <link rel="stylesheet" href="css/media.css">
 </head>
@@ -23,7 +22,7 @@
         <div class="container">
             <div class="header__top">
                 <a class="header__logo" href="#">
-                    <img src="images/header-logo.png" alt=""> 
+                    <img src="images/header-logo.png" alt="">
                 </a>
                 <nav class="header__menu">
                     <div class="header__burger">
@@ -44,17 +43,8 @@
     <section class="slider">
         <div class="container">
             <div class="slider__inner">
-                <div class="slider__item" style="background-image: url('../images/slider-bg.jpg');">
-                    <div class="slider__info">
-                        <div class="slider__info-title">
-                            Slide One
-                        </div>
-                        <div class="slider__info-text">
-                            Lorem ipsum dolor sit amet, malorum recteque reprehendunt ea vel. Urbanitas adolescens vim te, per at tritani aperiri. Adhuc invenire convenire his ea.
-                        </div>
-                    </div>
-                </div>
-                <div class="slider__item" style="background-image: url('../images/slider/slider-2.jpg');">
+
+                <div class="slider__item" style="background-image: url('images/slider-bg.jpg');">
                     <div class="slider__info">
                         <div class="slider__info-title">
                             Slide One
@@ -65,7 +55,9 @@
                     </div>
                 </div>
 
-                <div class="slider__item" style="background-image: url('../images/slider/slider-3.jpg');">
+
+                
+                <div class="slider__item" style="background-image: url('images/slider/slider-2.jpg');">
                     <div class="slider__info">
                         <div class="slider__info-title">
                             Slide One
@@ -76,7 +68,7 @@
                     </div>
                 </div>
 
-                <div class="slider__item" style="background-image: url('../images/slider/slider-4.jpg');">
+                <div class="slider__item" style="background-image: url('images/slider/slider-3.jpg');">
                     <div class="slider__info">
                         <div class="slider__info-title">
                             Slide One
@@ -87,17 +79,7 @@
                     </div>
                 </div>
 
-                <div class="slider__item" style="background-image: url('../images/slider/slider-5.jpg');">
-                    <div class="slider__info">
-                        <div class="slider__info-title">
-                            Slide One
-                        </div>
-                        <div class="slider__info-text">
-                            Lorem ipsum dolor sit amet, malorum recteque reprehendunt ea vel. Urbanitas adolescens vim te, per at tritani aperiri. Adhuc invenire convenire his ea.
-                        </div>
-                    </div>
-                </div>
-                <div class="slider__item" style="background-image: url('../images/slider/slider-6.jpg')">
+                <div class="slider__item" style="background-image: url('images/slider/slider-4.jpg');">
                     <div class="slider__info">
                         <div class="slider__info-title">
                             Slide One
@@ -108,13 +90,36 @@
                     </div>
                 </div>
 
+                <div class="slider__item" style="background-image: url('images/slider/slider-5.jpg');">
+                    <div class="slider__info">
+                        <div class="slider__info-title">
+                            Slide One
+                        </div>
+                        <div class="slider__info-text">
+                            Lorem ipsum dolor sit amet, malorum recteque reprehendunt ea vel. Urbanitas adolescens vim te, per at tritani aperiri. Adhuc invenire convenire his ea.
+                        </div>
+                    </div>
+                </div>
+                <div class="slider__item" style="background-image: url('images/slider/slider-6.jpg')">
+                    <div class="slider__info">
+                        <div class="slider__info-title">
+                            Slide One
+                        </div>
+                        <div class="slider__info-text">
+                            Lorem ipsum dolor sit amet, malorum recteque reprehendunt ea vel. Urbanitas adolescens vim te, per at tritani aperiri. Adhuc invenire convenire his ea.
+                        </div>
+                    </div>
+                </div>
             </div>
+
+
             <div class="thumbs">
                 <div>
-                    <div class="thumbs__item" style="background-image: url('../images/slider-bg.jpg');"></div>
+                    <div class="thumbs__item" style="background-image: url('images/slider-bg.jpg');"></div>
                 </div>
+
                 <div>
-                    <div class="thumbs__item" style="background-image: url('../images/slider/slider-2.jpg');"></div>
+                    <div class="thumbs__item" style="background-image: url('images/slider/slider-2.jpg');"></div>
                 </div>
                 <div>
                     <div class="thumbs__item" style="background-image: url(images/slider/slider-3.jpg);"></div>
@@ -197,7 +202,7 @@
     <section class="works">
         <div class="container">
             <div class="works__title-line">
-              <span>Recent Works</span>   
+                <span>Recent Works</span>
             </div>
             <div class="works__inner">
 
@@ -333,6 +338,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js "></script>
     <script src="js/libs.min.js "></script>
     <script src="js/slick.min.js "></script>
+    <script src="js/slick.js "></script>
     <script src="js/script.js "></script>
 </body>
 
